force-app/main/default/objects/LMT_User__c/LMT_User__c.object-meta.xml
<CustomObject>
    <description>LMT User is the Master object of License Management Tool, with all the roll-ups from LMT User License object to determine the Final Salesforce License used by users in various Orgs both at Profile level and Permission Sets level.</description>
    <label>LMT User</label>
    <nameField>
        <displayFormat>LMT-User-{0}</displayFormat>
        <label>LMT User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMT Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>