force-app/main/default/objects/LMT_User__c/fields/CEO_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>CEO_Last_Login_Date__c</fullName>
    <label>CEO Last Login Date</label>
    <type>DateTime</type>
</CustomField>