force-app/main/default/objects/LMT_User__c/fields/CEO_Org_License_Used__c.field-meta.xml
<CustomField>
    <fullName>CEO_Org_License_Used__c</fullName>
    <label>CEO Org License Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>