force-app/main/default/objects/LMT_User__c/fields/CS_Org_License_Used__c.field-meta.xml
<CustomField>
    <fullName>CS_Org_License_Used__c</fullName>
    <label>CS Org License Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>