force-app/main/default/objects/LMT_User__c/fields/EEO_Org_License_Used__c.field-meta.xml
<CustomField>
    <fullName>EEO_Org_License_Used__c</fullName>
    <label>EEO Org License Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>