force-app/main/default/objects/LMT_User__c/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <externalId>true</externalId>
    <label>Federation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>