force-app/main/default/objects/LMT_User__c/fields/Highest_Permission_Sets_License_Used__c.field-meta.xml
<CustomField>
    <fullName>Highest_Permission_Sets_License_Used__c</fullName>
    <formula>IF( Num_of_PS_SF_License_Used_RollUp__c &gt; 0, &quot;Salesforce&quot;, &quot;Non-CRM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Permission Sets License Used</label>
    <type>Text</type>
</CustomField>