force-app/main/default/objects/LMT_User__c/fields/Highest_Profile_License_Used__c.field-meta.xml
<CustomField>
    <fullName>Highest_Profile_License_Used__c</fullName>
    <formula>IF(  Num_of_Profile_SF_License_Used_RollUp__c &gt; 0, &quot;Salesforce&quot;, &quot;Non-CRM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Profile License Used</label>
    <type>Text</type>
</CustomField>