force-app/main/default/objects/LMT_User__c/fields/Num_of_Active_Status_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Active_Status_RollUp__c</fullName>
    <label>Num of Active Status RollUp</label>
    <summaryFilterItems>
        <field>OrgUsersLicense__c.ActiveUser__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrgUsersLicense__c.LMT_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>