force-app/main/default/objects/LMT_User__c/fields/Num_of_LMT_User_License_Records__c.field-meta.xml
<CustomField>
    <fullName>Num_of_LMT_User_License_Records__c</fullName>
    <label>Num of LMT User License Records</label>
    <summaryForeignKey>OrgUsersLicense__c.LMT_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>