force-app/main/default/objects/LMT_User__c/fields/Num_of_Profile_Chatr_License_Used_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Profile_Chatr_License_Used_RollUp__c</fullName>
    <label>Num of Profile Chatr License Used RollUp</label>
    <summaryFilterItems>
        <field>OrgUsersLicense__c.UserLicense__c</field>
        <operation>equals</operation>
        <value>Chatter Free</value>
    </summaryFilterItems>
    <summaryForeignKey>OrgUsersLicense__c.LMT_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>