force-app/main/default/objects/LMT_User__c/fields/PD_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Last_Login_Date__c</fullName>
    <label>PD Last Login Date</label>
    <type>DateTime</type>
</CustomField>