force-app/main/default/objects/LMT_User__c/fields/PD_Org_License_Used__c.field-meta.xml
<CustomField>
    <fullName>PD_Org_License_Used__c</fullName>
    <label>PD Org License Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>