force-app/main/default/objects/LMT_User__c/fields/PEO_Org_License_Used__c.field-meta.xml
<CustomField>
    <fullName>PEO_Org_License_Used__c</fullName>
    <label>PEO Org License Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>