force-app/main/default/objects/LMT_User__c/fields/Same_License_in_All_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Same_License_in_All_Orgs__c</fullName>
    <formula>IF(
    Num_of_Profile_SF_License_Used_RollUp__c ==  Num_of_LMT_User_License_Records__c ,
    &quot;Salesforce&quot;,
    IF(
         Num_of_Profile_Platf_License_Used_RollUp__c == Num_of_LMT_User_License_Records__c ,
        &quot;Platform&quot;,
        IF(
              Num_of_Profile_Chatr_License_Used_RollUp__c == Num_of_LMT_User_License_Records__c ,
             &quot;Chatter Free&quot;,
             &quot;Mix&quot;
         )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License in All Orgs</label>
    <type>Text</type>
</CustomField>