force-app/main/default/objects/LMT_User__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>