force-app/main/default/objects/LMT_User__c/fields/WS_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>WS_Last_Login_Date__c</fullName>
    <label>WS Last Login Date</label>
    <type>DateTime</type>
</CustomField>