force-app/main/default/objects/LMT_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Federation_ID__c</columns>
    <columns>Highest_Profile_License_Used__c</columns>
    <columns>Highest_Permission_Sets_License_Used__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>